--- a/www/index.html
+++ b/www/index.html
@@ -4,13 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
-  <!--scripts-->
-  <script src="components/loader.js"></script>
   <script src="lib/jquery-3.6.0.min.js"></script>
-  <script src="components/acao.js"></script>
-  
+  <script src="components/loader.js"></script>
+  <script src="components/plugins.js"></script>
 
-  <!--style-->
   <link rel="stylesheet" href="components/loader.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -18,42 +15,26 @@
  
 </head>
 <body>
-
-  <div class="container-fluid">
-    <div class="row-display">
-    <div class="col-12" id="display">0</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <h3>Plugin</h3>
+      </div>
     </div>
-  </div>
-  <div class="row-linha">
-    <div class="offset-6 col-6"><button type="button" class="btn btn-primary btn-block ce">CE</button></div>
-  </div>
 
-  <div class="row linha">
-    <div class="col-3"><button class="btn btn-primary btn-block num">1</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block num">2</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block num">3</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block op">-</button></div>
-  </div>
+    <div class="row">
+      <div class="col-sm">
+        <button class="btn btn-primary btn-block" id="alert">Alerta</button> 
+      </div>       
+    </div>
 
-  <div class="row linha">
-    <div class="col-3"><button class="btn btn-primary btn-block num">4</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block num">5</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block num">6</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block op">*</button></div>
-  </div>
+     <div class="row">
+      <div class="col-sm">
+        <button class="btn btn-primary btn-block" id="geo">Local</button> 
+      </div>       
+    </div>
 
-  <div class="row linha">
-    <div class="col-3"><button class="btn btn-primary btn-block num">7</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block num">8</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block num">9</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block op">/</button></div>
   </div>
-
-  <div class="row linha">
-    <div class="col-3"><button class="btn btn-primary btn-block num">0</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block num">.</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block calcular">=</button></div>
-    <div class="col-3"><button class="btn btn-primary btn-block op">+</button></div>
-  </div> 
+  
 </body>
 </html>
