--- a/www/index.html
+++ b/www/index.html
@@ -4,12 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
- <!--map quest--> <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
   <script src="lib/jquery-3.6.0.min.js"></script>
   <script src="components/loader.js"></script>
   <script src="components/plugins.js"></script>
 
-<!-- map quest-->  <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
   <link rel="stylesheet" href="components/loader.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -17,32 +15,24 @@
  
 </head>
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <h3>Plugin</h3>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm">
-        <button class="btn btn-primary btn-block" id="alert">Sobre</button> 
-      </div>       
-    </div>
-
-     <div class="row">
-      <div class="col-sm">
-        <button class="btn btn-primary btn-block" id="geo">Local</button> 
-      </div>       
-    </div>
-    <div class="row">
-      <div class="col-sm">
-        <div class="map" id="map">
-
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <h2>Camera</h2>
         </div>
       </div>
+      <div class="row">
+        <div class="col-sm">
+          <div class="form-group">
+            <button class="btn btn-primary btn-block" id="camera">Camera</button>
+          </div>
+        </div>  
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <img id="imagem" class="img-responsive imagem1">
+        </div> 
+      </div>
     </div>
-
-  </div>
 </body>
 </html>
