Project's Initial Commit

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <h2>Camera</h2>
+          <h2>Leitor de QR code</h2>
         </div>
       </div>
       <div class="row">
@@ -30,7 +30,7 @@
       </div>
       <div class="row">
         <div class="col-sm">
-          <img id="imagem" class="img-responsive imagem1">
+          <div class="display"></div>
         </div> 
       </div>
     </div>
